Fix  bug: About img max-witdh too large for small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,7 @@
 
 #hero-overlay {
     background-color: #686058;
-    opacity: 0.6;
+    opacity: 0.7;
     border-radius: 10px;
     padding: 20px;
     max-width: 70%;
@@ -62,7 +62,7 @@
 /* About Section */
 
 #about img {
-        max-height: 500px;
+        max-height: 400px;
         border-radius: 10px;
 }
 
